latest working code
