# src/services/identity.ts
@@ -1,24 +1,37 @@
-import { UserProfile, IdentitySignIn, IdentitySignUp } from '../models/identity';
+import { UserProfile, SignIn, SignUp } from '../models/identity';
 import { validatePasswordHash, generatePasswordHash, issueJWT } from '../helpers/crypto';
 import { v4 as uuidv4 } from 'uuid';
-import { Conflict, Unauthorized, NotVerified } from '../helpers/error-handling';
+import { Conflict, Unauthorized, NotVerified, InvalidFormat } from '../helpers/error-handling';
 import { auroraConnectApi } from '../helpers/aurora';
-import { Not } from 'typeorm';
-// import * as EmailValidator from 'email-validator';
-//import { phoneUtil } from 'google-libphonenumber';
+import { validateUsername } from '../helpers/validation';
+import { SuccessResponse, Response } from 'tsoa';
 
 
 export class IdentityService {
-    public async SignUp(SignUp: IdentitySignUp): Promise<any> {               
+    public async SignUp(SignUp: SignUp): Promise<any> {               
+        
+        const validPreferredUsername = validateUsername(SignUp.preferred_username);
+        const isValidEmail = validPreferredUsername.isValidEmail;
+        const isValidPhoneNumber = validPreferredUsername.isValidPhoneNumber;
+
+        if(!isValidEmail && !isValidPhoneNumber)
+            throw new InvalidFormat('Not a valid phone number or email address');
+        
         const connection = await auroraConnectApi();
         const repository = await connection.getRepository(UserProfile); 
-        const findUser = await repository.findOne({ preferred_username: SignUp.preferred_username });
 
+        let findUser: any;
+
+        if(isValidEmail) {
+            findUser = await repository.findOne({ email: SignUp.preferred_username });
+        } 
+        if(isValidPhoneNumber) {
+            findUser = await repository.findOne({ phone_number: SignUp.preferred_username });
+        }     
         if(findUser) { 
             throw new Conflict("User Already Exists");
         } 
         else {
-
             const genPassHash = generatePasswordHash(SignUp.password);
             const salt = genPassHash.salt;
             const hash = genPassHash.genHash;
@@ -32,10 +45,10 @@ export class IdentityService {
                 given_name: SignUp.given_name,
                 family_name: SignUp.family_name,
                 picture: null,
-                phone_number: "123",
+                phone_number: isValidPhoneNumber ? SignUp.preferred_username : null,
                 address: null,
                 locale: null,
-                email: SignUp.preferred_username,
+                email: isValidEmail ?  SignUp.preferred_username : null,
                 birth_date: null,
                 email_verified: false,
                 phone_number_verified: false,
@@ -50,13 +63,11 @@ export class IdentityService {
             const repository = await connection.getRepository(UserProfile);  
             await repository.save(userProfile);
 
-            return {
-                message: "User signed up sucessfully"
-            }
+            return "User signed up sucessfully";
         }
     }
 
-    public async SignIn(SignIn: IdentitySignIn): Promise<any> {
+    public async SignIn(SignIn: SignIn): Promise<any> {
         const connection = await auroraConnectApi();
         const repository = await connection.getRepository(UserProfile);      
         const findUser = await repository.findOne({ preferred_username: SignIn.preferred_username });
